feat: implementando auth guard
