# src/cashback/cashback.controller.ts
@@ -6,15 +6,24 @@ import {
   BadRequestException,
   InternalServerErrorException,
   Get,
+  UseGuards,
 } from '@nestjs/common';
-import { ApiOperation, ApiTags, ApiResponse, ApiHeader } from '@nestjs/swagger';
+import {
+  ApiOperation,
+  ApiTags,
+  ApiResponse,
+  ApiHeader,
+} from '@nestjs/swagger';
 import { CashbackAccumulatedResponsetDto } from './dto/cashback-accumulated-response';
+import { AuthGuard } from '../auth.guard';
 
 @ApiTags('Cashback')
 @Controller()
 export class CashbackController {
   constructor(private readonly cashbackService: CashbackService) {}
   @Get('/cashback/accumulated')
+  @ApiHeader({ name: 'authorization_token', required: true })
+  @UseGuards(AuthGuard)
   @HttpCode(200)
   @ApiResponse({
     status: 200,
@@ -31,7 +40,6 @@ export class CashbackController {
     description: 'Erro no servidor',
     type: InternalServerErrorException,
   })
-  @ApiHeader({ name: 'token', required: true })
   @ApiOperation({
     summary: 'Rota para exibir o acumulado de cashback até o momento por cpf',
     description:
@@ -41,7 +49,7 @@ export class CashbackController {
     @Headers() headers,
   ): Promise<CashbackAccumulatedResponsetDto> {
     try {
-      const { token } = headers;
+      const [, token] = headers.authorization_token.split(' ');
       const cashback = await this.cashbackService.getAccumulatedCashbackByCpf(
         token,
       );
